--- a/Week1/gnn/actually_using_reources_given_to_me/introduction.ipynb
+++ b/Week1/gnn/actually_using_reources_given_to_me/introduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "id": "cd37f6c2",
    "metadata": {},
    "outputs": [
@@ -29,9 +29,9 @@
     "os.environ['TORCH'] = torch.__version__\n",
     "print(torch.__version__)\n",
     "\n",
-    "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+    "%pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "%pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "%pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
     "\n",
     "# Helper function for visualization.\n",
     "%matplotlib inline\n",
