--- a/Week1/gnn/actually_using_reources_given_to_me/node_classification.ipynb
+++ b/Week1/gnn/actually_using_reources_given_to_me/node_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "7476c967",
    "metadata": {},
    "outputs": [
@@ -21,9 +21,9 @@
     "os.environ['TORCH'] = torch.__version__\n",
     "print(torch.__version__)\n",
     "\n",
-    "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+    "%pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "%pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "%pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
     "\n",
     "# Helper function for visualization.\n",
     "%matplotlib inline\n",
